--- a/prec.ipynb
+++ b/prec.ipynb
@@ -187,6 +187,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "033a38b8",
+   "metadata": {},
+   "source": [
+    "## not required \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "02eb2822",
